--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^6.1.8",
     "mongoose-unique-validator": "^3.0.0",
     "nest-access-control": "^2.0.4",
+    "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
